[package]
name = "starbook"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
description = "*book"
license = "MPL-2.0"
homepage = "https://github.com/badboy/starbook"
repository = "https://github.com/badboy/starbook"
edition = "2018"

[dependencies]
mdbook = "0.3"
env_logger = "0.6"
log = "0.4"
clap = "2.33"
serde_json = "1.0"
